--- a/ui/root.templ
+++ b/ui/root.templ
@@ -14,6 +14,67 @@ templ (view RootView) Head() {
 }
 
 templ (view RootView) View() {
-	<div class="flex bg-red-500">Hello World</div>
-	@gong.Outlet()
+	<div class="flex flex-col h-full bg-base-100">
+		<div class="navbar bg-base-100 border-b drop-shadow-sm">
+			<div class="flex-1">
+				<a class="btn btn-ghost text-xl">Gong</a>
+			</div>
+			<div class="flex-none">
+				<button class="btn btn-square btn-ghost">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						fill="none"
+						viewBox="0 0 24 24"
+						class="inline-block h-5 w-5 stroke-current"
+					>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							stroke-width="2"
+							d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"
+						></path>
+					</svg>
+				</button>
+			</div>
+		</div>
+		<div class="flex grow flex-row min-h-0">
+			<div class="flex flex-col w-fit h-full border-r">
+				<ul class="menu rounded-box w-56 p-4">
+					<li>
+						<details open>
+							<summary>Docs</summary>
+							<ul>
+								<li>
+									@gong.Link("/docs/installation") {
+										<a>
+											Installation
+										</a>
+									}
+								</li>
+								<li>
+									@gong.Link("/docs/basic-usage") {
+										<a>
+											Basic Usage
+										</a>
+									}
+								</li>
+							</ul>
+						</details>
+					</li>
+					<li>
+						<details open>
+							<summary>Components</summary>
+							<ul>
+								<li><a>Form</a></li>
+								<li><a>Target</a></li>
+								<li><a>Outlet</a></li>
+								<li><a>Link</a></li>
+							</ul>
+						</details>
+					</li>
+				</ul>
+			</div>
+			@gong.Outlet()
+		</div>
+	</div>
 }
