--- a/ui/docs.templ
+++ b/ui/docs.templ
@@ -15,7 +15,7 @@ templ (view DocsView) View() {
 	item := gong.GetRequest(ctx).PathValue("item")
 	content := view.Content[item]
 	}}
-	<div class="prose p-4">
+	<div class="prose p-4 max-w-max">
 		@templ.ComponentFunc(func(ctx context.Context, w io.Writer) error {
 			_, err := io.WriteString(w, content)
 			return err
