--- a/ui/root.templ
+++ b/ui/root.templ
@@ -10,6 +10,7 @@ templ (view RootView) Head() {
 		<title>Gong</title>
 		<script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
 		<link href="/public/index.css" rel="stylesheet"/>
+		<link rel="icon" type="image/x-icon" href="/public/logo.png"/>
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism.min.css" rel="stylesheet"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-go.min.js"></script>
@@ -18,7 +19,7 @@ templ (view RootView) Head() {
 
 templ (view RootView) View() {
 	<script>
-        document.body.addEventListener('htmx:beforeSwap', function(event) {
+        document.body.addEventListener('htmx:afterSwap', function(event) {
             Prism.highlightAllUnder(event.detail.target);
         });
     </script>
