--- a/ui/root.templ
+++ b/ui/root.templ
@@ -10,7 +10,7 @@ templ (view RootView) Head() {
 		<title>Gong</title>
 		<script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
 		<link href="/public/index.css" rel="stylesheet"/>
-		<link rel="icon" type="image/x-icon" href="/public/logo.png"/>
+		<link rel="icon" type="image/x-icon" href="/public/icon.png"/>
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism.min.css" rel="stylesheet"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-go.min.js"></script>
@@ -27,7 +27,7 @@ templ (view RootView) View() {
 		<div class="navbar bg-base-100 border-b drop-shadow-sm">
 			<div class="flex-1">
 				<div class="flex flex-row  place-items-center gap-2 pl-4">
-					<image src="/public/logo.png" class="size-12"></image>
+					<image src="/public/icon.png" class="size-12"></image>
 					<div class="text-2xl font-bold">Gong</div>
 				</div>
 			</div>
