--- a/public/index.css
+++ b/public/index.css
@@ -1839,8 +1839,8 @@ html {
   height: 3rem;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-8 {
+  height: 2rem;
 }
 
 .h-full {
@@ -1851,12 +1851,12 @@ html {
   min-height: 0px;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
 .w-64 {
   width: 16rem;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-fit {
@@ -1917,16 +1917,13 @@ html {
   background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity, 1)));
 }
 
-.stroke-current {
-  stroke: currentColor;
-}
-
 .p-4 {
   padding: 1rem;
 }
 
-.pl-4 {
+.px-4 {
   padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .text-2xl {
