--- a/ui/root.templ
+++ b/ui/root.templ
@@ -24,29 +24,17 @@ templ (view RootView) View() {
         });
     </script>
 	<div class="flex flex-col h-full bg-base-100">
-		<div class="navbar bg-base-100 border-b drop-shadow-sm">
+		<div class="navbar bg-base-100 border-b drop-shadow-sm px-4">
 			<div class="flex-1">
-				<div class="flex flex-row  place-items-center gap-2 pl-4">
+				<div class="flex flex-row  place-items-center gap-2">
 					<image src="/public/icon.png" class="size-12"></image>
 					<div class="text-2xl font-bold">Gong</div>
 				</div>
 			</div>
 			<div class="flex-none">
-				<button class="btn btn-square btn-ghost">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						fill="none"
-						viewBox="0 0 24 24"
-						class="inline-block h-5 w-5 stroke-current"
-					>
-						<path
-							stroke-linecap="round"
-							stroke-linejoin="round"
-							stroke-width="2"
-							d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"
-						></path>
-					</svg>
-				</button>
+				<a class="btn btn-square btn-ghost" href="https://github.com/troygilman0/gong">
+					@githubIcon("inline-block w-8 h-8")
+				</a>
 			</div>
 		</div>
 		<div class="flex grow flex-row min-h-0">
