--- a/ui/root.templ
+++ b/ui/root.templ
@@ -1,6 +1,9 @@
 package ui
 
-import "github.com/troygilman0/gong"
+import (
+	"fmt"
+	"github.com/troygilman0/gong"
+)
 
 type RootView struct{}
 
@@ -11,6 +14,7 @@ templ (view RootView) Head() {
 		<script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
 		<link href="/public/index.css" rel="stylesheet"/>
 		<link rel="icon" type="image/x-icon" href="/public/icon.png"/>
+		<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism.min.css" rel="stylesheet"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-go.min.js"></script>
@@ -23,7 +27,7 @@ templ (view RootView) View() {
             Prism.highlightAllUnder(event.detail.target);
         });
     </script>
-	<div class="flex flex-col h-full bg-base-100">
+	<div class="flex flex-col h-full bg-base-100" x-data>
 		<div class="navbar bg-base-100 border-b drop-shadow-sm px-4">
 			<div class="flex-1">
 				<div class="flex flex-row  place-items-center gap-2">
@@ -33,7 +37,7 @@ templ (view RootView) View() {
 			</div>
 			<div class="flex-none">
 				<a class="btn btn-square btn-ghost" href="https://github.com/troygilman0/gong">
-					@githubIcon("inline-block w-8 h-8")
+					@githubIcon("inline-block w-6 h-6")
 				</a>
 			</div>
 		</div>
@@ -44,27 +48,9 @@ templ (view RootView) View() {
 						<details open>
 							<summary>Getting Started</summary>
 							<ul>
-								<li>
-									@gong.Link("/getting-started/introduction") {
-										<a>
-											Introduction
-										</a>
-									}
-								</li>
-								<li>
-									@gong.Link("/getting-started/installation") {
-										<a>
-											Installation
-										</a>
-									}
-								</li>
-								<li>
-									@gong.Link("/docs/basic-usage") {
-										<a>
-											Basic Usage
-										</a>
-									}
-								</li>
+								@docLink("Introduction", "/getting-started/introduction")
+								@docLink("Installation", "/getting-started/installation")
+								@docLink("Basic Usage", "/getting-started/basic-usage")
 							</ul>
 						</details>
 					</li>
@@ -86,4 +72,19 @@ templ (view RootView) View() {
 			</div>
 		</div>
 	</div>
+}
+
+templ docLink(label string, link string) {
+	@gong.Link(link) {
+		<li>
+			<a
+				x-data={ fmt.Sprintf("{ active: window.location.pathname === `%s` }", link) }
+				@click="active = true; $dispatch('link-clear-active')"
+				@link-clear-active.outside="active = false"
+				:class="active && 'active'"
+			>
+				{ label }
+			</a>
+		</li>
+	}
 }
