--- a/ui/root.templ
+++ b/ui/root.templ
@@ -50,7 +50,6 @@ templ (view RootView) View() {
 							<ul>
 								@docLink("Introduction", "/docs/getting-started/introduction")
 								@docLink("Installation", "/docs/getting-started/installation")
-								@docLink("Basic Usage", "/docs/getting-started/basic-usage")
 							</ul>
 						</details>
 					</li>
@@ -58,10 +57,10 @@ templ (view RootView) View() {
 						<details open>
 							<summary>Components</summary>
 							<ul>
-								<li><a>Form</a></li>
-								<li><a>Target</a></li>
-								<li><a>Outlet</a></li>
-								<li><a>Link</a></li>
+								@docLink("Form", "/docs/components/form")
+								@docLink("Target", "/docs/components/target")
+								@docLink("Outlet", "/docs/components/outlet")
+								@docLink("Link", "/docs/components/link")
 							</ul>
 						</details>
 					</li>
