--- a/ui/root.templ
+++ b/ui/root.templ
@@ -32,7 +32,7 @@ templ (view RootView) View() {
 				</div>
 			</div>
 			<div class="flex-none">
-				<a class="btn btn-square btn-ghost" href="https://github.com/troygilman0/gong">
+				<a class="btn btn-square btn-ghost" href="https://github.com/troygilman/gong">
 					@githubIcon("inline-block w-6 h-6")
 				</a>
 			</div>
