--- a/public/index.css
+++ b/public/index.css
@@ -1942,6 +1942,10 @@ html {
   width: fit-content;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -1956,6 +1960,10 @@ html {
 
 .grow {
   flex-grow: 1;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-row {
