--- a/ui/document.templ
+++ b/ui/document.templ
@@ -21,37 +21,39 @@ templ (view DocumentView) View() {
 	prevDocument, _ := view.DocManager.getByPosition(document.metadata.Position - 1)
 	nextDocument, _ := view.DocManager.getByPosition(document.metadata.Position + 1)
 	}}
-	<div class="flex flex-col p-4 gap-4">
-		<div class="prose pb-4">
-			@templ.ComponentFunc(func(ctx context.Context, w io.Writer) error {
-				_, err := io.WriteString(w, document.html)
-				return err
-			})
-		</div>
-		<div class="flex flex-row justify-between">
-			<div>
-				if prevDocument != nil {
-					@gong.Link("/docs/" + prevDocument.path).WithClosestOutlet() {
-						<div class="btn btn-lg flex-col place-items-start">
-							<div class="text-sm">Previous</div>
-							<div class="text-primary font-bold">
-								{ prevDocument.metadata.Label }
-							</div>
-						</div>
-					}
-				}
+	<div class="flex flex-col p-4 gap-4 place-items-center">
+		<div>
+			<div class="prose pb-4">
+				@templ.ComponentFunc(func(ctx context.Context, w io.Writer) error {
+					_, err := io.WriteString(w, document.html)
+					return err
+				})
 			</div>
-			<div>
-				if nextDocument != nil {
-					@gong.Link("/docs/" + nextDocument.path).WithClosestOutlet() {
-						<div class="btn btn-lg flex-col place-items-end">
-							<div class="text-sm">Next</div>
-							<div class="text-primary font-bold">
-								{ nextDocument.metadata.Label }
+			<div class="flex flex-row w-full justify-between">
+				<div>
+					if prevDocument != nil {
+						@gong.Link("/docs/" + prevDocument.path).WithClosestOutlet() {
+							<div class="btn btn-lg flex-col place-items-start">
+								<div class="text-sm">Previous</div>
+								<div class="text-primary font-bold">
+									{ prevDocument.metadata.Label }
+								</div>
 							</div>
-						</div>
+						}
 					}
-				}
+				</div>
+				<div>
+					if nextDocument != nil {
+						@gong.Link("/docs/" + nextDocument.path).WithClosestOutlet() {
+							<div class="btn btn-lg flex-col place-items-end">
+								<div class="text-sm">Next</div>
+								<div class="text-primary font-bold">
+									{ nextDocument.metadata.Label }
+								</div>
+							</div>
+						}
+					}
+				</div>
 			</div>
 		</div>
 	</div>
