added tutorial section

--- a/public/index.css
+++ b/public/index.css
@@ -1950,6 +1950,14 @@ html {
   min-width: 0px;
 }
 
+.max-w-full {
+  max-width: 100%;
+}
+
+.max-w-screen-lg {
+  max-width: 1024px;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
