--- a/ui/document.templ
+++ b/ui/document.templ
@@ -35,7 +35,7 @@ templ (view DocumentView) View() {
 			<div class="flex flex-row w-full justify-between">
 				<div>
 					if prevDocument != nil {
-						@gong.Link("/docs/" + prevDocument.path).WithClosestOutlet() {
+						@gong.NewLink("/docs/" + prevDocument.path).WithClosestOutlet() {
 							<div class="btn btn-lg flex-col place-items-start">
 								<div class="text-sm">Previous</div>
 								<div class="text-primary font-bold">
@@ -47,7 +47,7 @@ templ (view DocumentView) View() {
 				</div>
 				<div>
 					if nextDocument != nil {
-						@gong.Link("/docs/" + nextDocument.path).WithClosestOutlet() {
+						@gong.NewLink("/docs/" + nextDocument.path).WithClosestOutlet() {
 							<div class="btn btn-lg flex-col place-items-end">
 								<div class="text-sm">Next</div>
 								<div class="text-primary font-bold">
