--- a/ui/root.templ
+++ b/ui/root.templ
@@ -54,6 +54,16 @@ templ (view RootView) View() {
 					</li>
 					<li>
 						<details open>
+							<summary>Core Concepts</summary>
+							<ul>
+								@docLink("View", "/docs/core-concepts/view")
+								@docLink("Action", "/docs/core-concepts/action")
+								@docLink("Loader", "/docs/core-concepts/loader")
+							</ul>
+						</details>
+					</li>
+					<li>
+						<details open>
 							<summary>Components</summary>
 							<ul>
 								@docLink("Form", "/docs/components/form")
