--- a/ui/root.templ
+++ b/ui/root.templ
@@ -28,7 +28,7 @@ templ (view RootView) View() {
 			<div class="flex-1">
 				<div class="flex flex-row  place-items-center gap-2">
 					<image src="/public/icon.png" class="size-12"></image>
-					@gong.NewLink("/docs/") {
+					@gong.NewLink("/") {
 						<div class="text-2xl font-bold cursor-pointer">Gong</div>
 					}
 				</div>
