--- a/ui/root.templ
+++ b/ui/root.templ
@@ -11,6 +11,7 @@ templ (view RootView) Head() {
 	<head>
 		<meta charset="utf-8"/>
 		<title>Gong</title>
+		<html data-theme="light"></html>
 		<script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
 		<link href="/public/index.css" rel="stylesheet"/>
 		<link rel="icon" type="image/x-icon" href="/public/icon.png"/>
