--- a/ui/root.templ
+++ b/ui/root.templ
@@ -25,60 +25,107 @@ templ (view RootView) Head() {
 templ (view RootView) View() {
 	@initScript()
 	<div class="flex flex-col h-full bg-base-100" x-data>
-		<div class="navbar bg-base-100 drop-shadow px-4">
-			<div class="flex-1">
-				<div class="flex flex-row  place-items-center gap-2">
-					<image src="/public/icon.png" class="size-12"></image>
-					@gong.NewLink("/") {
-						<div class="text-2xl font-bold cursor-pointer">Gong</div>
-					}
+		<div class="drawer lg:drawer-open flex grow flex-row min-h-0">
+			<input id="my-drawer" type="checkbox" class="drawer-toggle"/>
+			@drawerSide()
+			@drawerContent()
+		</div>
+	</div>
+}
+
+templ drawerSide() {
+	<div class="drawer-side z-50">
+		<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+		<div class="flex flex-col h-full bg-base-100">
+			<div class="navbar px-4">
+				<div class="flex-1">
+					<div class="flex flex-row  place-items-center gap-2">
+						<image src="/public/icon.png" class="size-12"></image>
+						@gong.NewLink("/") {
+							<div class="text-2xl font-bold cursor-pointer">Gong</div>
+						}
+					</div>
+				</div>
+				<div class="flex-none">
+					<a class="btn btn-square btn-ghost" href="https://github.com/troygilman/gong">
+						@githubIcon("inline-block w-6 h-6")
+					</a>
 				</div>
 			</div>
-			<div class="flex-none">
-				<a class="btn btn-square btn-ghost" href="https://github.com/troygilman/gong">
-					@githubIcon("inline-block w-6 h-6")
-				</a>
-			</div>
+			<ul class="menu rounded-box w-64 p-4">
+				@menuGroup("Getting Started", []menuItemProps{
+					{
+						label: "Introduction",
+						link:  "/docs/getting-started/introduction",
+					},
+					{
+						label: "Installation",
+						link:  "/docs/getting-started/installation",
+					},
+					{
+						label: "Tutorial",
+						link:  "/docs/getting-started/tutorial",
+					},
+				})
+				@menuGroup("Core Concepts", []menuItemProps{
+					{
+						label: "View",
+						link:  "/docs/core-concepts/view",
+					},
+					{
+						label: "Action",
+						link:  "/docs/core-concepts/action",
+					},
+					{
+						label: "Loader",
+						link:  "/docs/core-concepts/loader",
+					},
+				})
+			</ul>
 		</div>
-		<div class="flex grow flex-row min-h-0">
-			<div class="flex flex-col w-fit h-full">
-				<ul class="menu rounded-box w-64 p-4">
-					<li>
-						<details open>
-							<summary>Getting Started</summary>
-							<ul>
-								@docLink("Introduction", "/docs/getting-started/introduction")
-								@docLink("Installation", "/docs/getting-started/installation")
-								@docLink("Tutorial", "/docs/getting-started/tutorial")
-							</ul>
-						</details>
-					</li>
-					<li>
-						<details open>
-							<summary>Core Concepts</summary>
-							<ul>
-								@docLink("View", "/docs/core-concepts/view")
-								@docLink("Action", "/docs/core-concepts/action")
-								@docLink("Loader", "/docs/core-concepts/loader")
-							</ul>
-						</details>
-					</li>
-					<li>
-						<details open>
-							<summary>Components</summary>
-							<ul>
-								@docLink("Form", "/docs/components/form")
-								@docLink("Target", "/docs/components/target")
-								@docLink("Outlet", "/docs/components/outlet")
-								@docLink("Link", "/docs/components/link")
-							</ul>
-						</details>
-					</li>
-				</ul>
-			</div>
-			<div id="outlet-container" class="flex grow h-full min-w-0 overflow-y-scroll justify-center">
-				@gong.NewOutlet().WithClass("w-full h-full")
-			</div>
+	</div>
+}
+
+templ menuGroup(title string, itemProps []menuItemProps) {
+	<li>
+		<details open>
+			<summary>{ title }</summary>
+			<ul>
+				for _, p := range itemProps {
+					@menuItem(p)
+				}
+			</ul>
+		</details>
+	</li>
+}
+
+type menuItemProps struct {
+	label string
+	link  string
+}
+
+templ menuItem(props menuItemProps) {
+	@gong.NewLink(props.link) {
+		<li>
+			<a
+				x-data={ fmt.Sprintf("{ active: false, pathname: '%s' }", props.link) }
+				x-init="active = pathname === window.location.pathname"
+				@htmx:after-swap.window="active = pathname === window.location.pathname"
+				:class="active && 'menu-active'"
+			>
+				{ props.label }
+			</a>
+		</li>
+	}
+}
+
+templ drawerContent() {
+	<div class="drawer-content flex flex-col h-full w-full">
+		<label for="my-drawer" class="btn btn-primary drawer-button lg:hidden">
+			Open drawer
+		</label>
+		<div id="outlet-container" class="flex grow w-full min-h-0 overflow-y-scroll justify-center">
+			@gong.NewOutlet().WithClass("w-full h-full")
 		</div>
 	</div>
 }
@@ -118,19 +165,4 @@ script initScript() {
         addCopyButtons();
         document.getElementById("outlet-container").scrollTop = 0;
     });
-}
-
-templ docLink(label string, link string) {
-	@gong.NewLink(link) {
-		<li>
-			<a
-				x-data={ fmt.Sprintf("{ active: false, pathname: '%s' }", link) }
-				x-init="active = pathname === window.location.pathname"
-				@htmx:after-swap.window="active = pathname === window.location.pathname"
-				:class="active && 'menu-active'"
-			>
-				{ label }
-			</a>
-		</li>
-	}
 }
