--- a/ui/root.templ
+++ b/ui/root.templ
@@ -1,9 +1,6 @@
 package ui
 
-import (
-	"fmt"
-	"github.com/troygilman/gong"
-)
+import "github.com/troygilman/gong"
 
 type RootView struct{}
 
@@ -52,71 +49,9 @@ templ drawerSide() {
 					</a>
 				</div>
 			</div>
-			<ul class="menu rounded-box w-64 p-4">
-				@menuGroup("Getting Started", []menuItemProps{
-					{
-						label: "Introduction",
-						link:  "/docs/getting-started/introduction",
-					},
-					{
-						label: "Installation",
-						link:  "/docs/getting-started/installation",
-					},
-					{
-						label: "Tutorial",
-						link:  "/docs/getting-started/tutorial",
-					},
-				})
-				@menuGroup("Core Concepts", []menuItemProps{
-					{
-						label: "View",
-						link:  "/docs/core-concepts/view",
-					},
-					{
-						label: "Action",
-						link:  "/docs/core-concepts/action",
-					},
-					{
-						label: "Loader",
-						link:  "/docs/core-concepts/loader",
-					},
-				})
-			</ul>
+			@Menu()
 		</div>
 	</div>
-}
-
-templ menuGroup(title string, itemProps []menuItemProps) {
-	<li>
-		<details open>
-			<summary>{ title }</summary>
-			<ul>
-				for _, p := range itemProps {
-					@menuItem(p)
-				}
-			</ul>
-		</details>
-	</li>
-}
-
-type menuItemProps struct {
-	label string
-	link  string
-}
-
-templ menuItem(props menuItemProps) {
-	@gong.NewLink(props.link) {
-		<li>
-			<a
-				x-data={ fmt.Sprintf("{ active: false, pathname: '%s' }", props.link) }
-				x-init="active = pathname === window.location.pathname"
-				@htmx:after-swap.window="active = pathname === window.location.pathname"
-				:class="active && 'menu-active'"
-			>
-				{ props.label }
-			</a>
-		</li>
-	}
 }
 
 templ drawerContent() {
@@ -130,8 +65,9 @@ templ drawerContent() {
 	</div>
 }
 
-script initScript() {
-    let addCopyButtons = () => {
+templ initScript() {
+	<script>
+	let addCopyButtons = () => {
         // Add copy buttons to code blocks
         document.querySelectorAll('pre').forEach(block => {
             // Create the copy button
@@ -165,4 +101,5 @@ script initScript() {
         addCopyButtons();
         document.getElementById("outlet-container").scrollTop = 0;
     });
+    </script>
 }
