--- a/ui/root.templ
+++ b/ui/root.templ
@@ -35,19 +35,12 @@ templ drawerSide() {
 		<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
 		<div class="flex flex-col h-full bg-base-100">
 			<div class="navbar px-4">
-				<div class="flex-1">
-					<div class="flex flex-row  place-items-center gap-2">
+				@gong.NewLink("/") {
+					<div class="flex flex-row place-items-center gap-2 cursor-pointer">
 						<image src="/public/icon.png" class="size-12"></image>
-						@gong.NewLink("/") {
-							<div class="text-2xl font-bold cursor-pointer">Gong</div>
-						}
+						<div class="text-2xl font-bold">Gong</div>
 					</div>
-				</div>
-				<div class="flex-none">
-					<a class="btn btn-square btn-ghost" href="https://github.com/troygilman/gong">
-						@githubIcon("inline-block w-6 h-6")
-					</a>
-				</div>
+				}
 			</div>
 			@Menu()
 		</div>
@@ -56,9 +49,16 @@ templ drawerSide() {
 
 templ drawerContent() {
 	<div class="drawer-content flex flex-col h-full w-full">
-		<label for="my-drawer" class="btn btn-primary drawer-button lg:hidden">
-			Open drawer
-		</label>
+		<div class="navbar flex justify-between">
+			<div>
+				<label for="my-drawer" class="btn btn-ghost drawer-button lg:hidden">
+					Open drawer
+				</label>
+			</div>
+			<a class="btn btn-ghost" href="https://github.com/troygilman/gong">
+				@githubIcon("inline-block w-6 h-6")
+			</a>
+		</div>
 		<div id="outlet-container" class="flex grow w-full min-h-0 overflow-y-scroll justify-center">
 			@gong.NewOutlet().WithClass("w-full h-full")
 		</div>
