--- a/ui/root.templ
+++ b/ui/root.templ
@@ -21,46 +21,48 @@ templ (view RootView) Head() {
 
 templ (view RootView) View() {
 	@initScript()
-	<div class="flex flex-col h-full bg-base-100" x-data>
-		<div class="drawer lg:drawer-open flex grow flex-row min-h-0">
-			<input id="my-drawer" type="checkbox" class="drawer-toggle"/>
-			@drawerSide()
-			@drawerContent()
-		</div>
+	<div class="drawer lg:drawer-open w-full h-full bg-base-100" x-data>
+		<input id="my-drawer" type="checkbox" class="drawer-toggle"/>
+		@drawerSide()
+		@drawerContent()
 	</div>
 }
 
 templ drawerSide() {
 	<div class="drawer-side z-50">
 		<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-		<div class="flex flex-col h-full bg-base-100">
-			<div class="navbar px-4">
-				@gong.NewLink("/") {
-					<div class="flex flex-row place-items-center gap-2 cursor-pointer">
-						<image src="/public/icon.png" class="size-12"></image>
-						<div class="text-2xl font-bold">Gong</div>
-					</div>
-				}
+		<div class="bg-base-100 min-h-screen w-80">
+			<div class="flex flex-col">
+				<div class="navbar px-4">
+					@gong.NewLink("/") {
+						<div class="flex flex-row place-items-center gap-2 cursor-pointer">
+							<image src="/public/icon.png" class="size-12"></image>
+							<div class="text-2xl font-bold">Gong</div>
+						</div>
+					}
+				</div>
+				@Menu()
 			</div>
-			@Menu()
 		</div>
 	</div>
 }
 
 templ drawerContent() {
-	<div class="drawer-content flex flex-col h-full w-full">
-		<div class="navbar flex justify-between">
-			<div>
-				<label for="my-drawer" class="btn btn-ghost drawer-button lg:hidden">
-					Open drawer
-				</label>
+	<div class="drawer-content">
+		<div class="flex flex-col">
+			<div class="navbar flex justify-between">
+				<div>
+					<label for="my-drawer" class="btn btn-ghost drawer-button lg:hidden">
+						Open drawer
+					</label>
+				</div>
+				<a class="btn btn-ghost" href="https://github.com/troygilman/gong">
+					@githubIcon("inline-block w-6 h-6")
+				</a>
 			</div>
-			<a class="btn btn-ghost" href="https://github.com/troygilman/gong">
-				@githubIcon("inline-block w-6 h-6")
-			</a>
-		</div>
-		<div id="outlet-container" class="flex grow w-full min-h-0 overflow-y-scroll justify-center">
-			@gong.NewOutlet().WithClass("w-full h-full")
+			<div id="outlet-container" class="flex grow w-full min-h-0 overflow-y-scroll justify-center">
+				@gong.NewOutlet().WithClass("w-full h-full")
+			</div>
 		</div>
 	</div>
 }
