--- a/ui/root.templ
+++ b/ui/root.templ
@@ -49,14 +49,14 @@ templ drawerSide() {
 
 templ drawerContent() {
 	<div class="drawer-content">
-		<div class="flex flex-col">
+		<div class="flex flex-col max-h-screen">
 			<div class="navbar flex justify-between">
 				<div>
 					<label for="my-drawer" class="btn btn-ghost drawer-button lg:hidden">
 						Open drawer
 					</label>
 				</div>
-				<a class="btn btn-ghost" href="https://github.com/troygilman/gong">
+				<a class="btn btn-square btn-ghost" href="https://github.com/troygilman/gong">
 					@githubIcon("inline-block w-6 h-6")
 				</a>
 			</div>
