--- a/ui/root.templ
+++ b/ui/root.templ
@@ -31,7 +31,7 @@ templ (view RootView) View() {
 templ drawerSide() {
 	<div class="drawer-side z-50">
 		<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-		<div class="bg-base-100 min-h-screen w-80">
+		<div class="bg-base-100 min-h-screen w-64">
 			<div class="flex flex-col">
 				<div class="navbar px-4">
 					@gong.NewLink("/") {
@@ -52,12 +52,12 @@ templ drawerContent() {
 		<div class="flex flex-col max-h-screen">
 			<div class="navbar flex justify-between">
 				<div>
-					<label for="my-drawer" class="btn btn-ghost drawer-button lg:hidden">
-						Open drawer
+					<label for="my-drawer" class="btn btn-square btn-lg btn-ghost drawer-button lg:hidden">
+						@sidebarIcon("inline-block w-8 h-8")
 					</label>
 				</div>
-				<a class="btn btn-square btn-ghost" href="https://github.com/troygilman/gong">
-					@githubIcon("inline-block w-6 h-6")
+				<a class="btn btn-square btn-lg btn-ghost" href="https://github.com/troygilman/gong">
+					@githubIcon("inline-block w-8 h-8")
 				</a>
 			</div>
 			<div id="outlet-container" class="flex grow w-full min-h-0 overflow-y-scroll justify-center">
