--- a/ui/root.templ
+++ b/ui/root.templ
@@ -52,12 +52,12 @@ templ drawerContent() {
 		<div class="flex flex-col max-h-screen">
 			<div class="navbar flex justify-between">
 				<div>
-					<label for="my-drawer" class="btn btn-square btn-lg btn-ghost drawer-button lg:hidden">
-						@sidebarIcon("inline-block w-8 h-8")
+					<label for="my-drawer" class="btn btn-square btn-ghost drawer-button lg:hidden">
+						@sidebarIcon("inline-block w-6 h-6")
 					</label>
 				</div>
-				<a class="btn btn-square btn-lg btn-ghost" href="https://github.com/troygilman/gong">
-					@githubIcon("inline-block w-8 h-8")
+				<a class="btn btn-square btn-ghost" href="https://github.com/troygilman/gong">
+					@githubIcon("inline-block w-6 h-6")
 				</a>
 			</div>
 			<div id="outlet-container" class="flex grow w-full min-h-0 overflow-y-scroll justify-center">
