--- a/ui/menu.templ
+++ b/ui/menu.templ
@@ -23,16 +23,12 @@ templ Menu() {
 		})
 		@MenuGroup("Core Concepts", []MenuItemProps{
 			{
-				label: "View",
-				link:  "/docs/core-concepts/view",
+				label: "Component",
+				link:  "/docs/core-concepts/component",
 			},
 			{
-				label: "Action",
-				link:  "/docs/core-concepts/action",
-			},
-			{
-				label: "Loader",
-				link:  "/docs/core-concepts/loader",
+				label: "Route",
+				link:  "/docs/core-concepts/route",
 			},
 		})
 	</ul>
