added tutorial advanced

--- a/ui/menu.templ
+++ b/ui/menu.templ
@@ -20,6 +20,10 @@ templ Menu() {
 				label: "Tutorial",
 				link:  "/docs/getting-started/tutorial",
 			},
+			{
+				label: "Tutorial (Advanced)",
+				link:  "/docs/getting-started/tutorial-advanced",
+			},
 		})
 		@MenuGroup("Core Concepts", []MenuItemProps{
 			{
