added more docs

--- a/ui/menu.templ
+++ b/ui/menu.templ
@@ -27,12 +27,12 @@ templ Menu() {
 		})
 		@MenuGroup("Core Concepts", []MenuItemProps{
 			{
-				label: "Component",
-				link:  "/docs/core-concepts/component",
+				label: "Components",
+				link:  "/docs/core-concepts/components",
 			},
 			{
-				label: "Route",
-				link:  "/docs/core-concepts/route",
+				label: "Routing",
+				link:  "/docs/core-concepts/routing",
 			},
 		})
 	</ul>
