--- a/ui/menu.templ
+++ b/ui/menu.templ
@@ -6,7 +6,7 @@ import (
 )
 
 templ Menu() {
-	<ul class="menu rounded-box w-full">
+	<ul class="menu rounded-box w-full text-lg lg:text-sm">
 		@MenuGroup("Getting Started", []MenuItemProps{
 			{
 				label: "Introduction",
