--- a/ui/document.templ
+++ b/ui/document.templ
@@ -21,9 +21,9 @@ templ (view DocumentView) View() {
 	prevDocument, _ := view.DocManager.getByPosition(document.metadata.Position - 1)
 	nextDocument, _ := view.DocManager.getByPosition(document.metadata.Position + 1)
 	}}
-	<div class="flex flex-col p-4 gap-4 place-items-center">
-		<div class="max-w-screen-lg">
-			<div class="prose max-w-full pb-8 text-2xl lg:text-sm">
+	<div class="flex flex-col p-4 gap-4 place-items-center w-full">
+		<div class="max-w-screen-lg w-full">
+			<div class="prose max-w-full pb-8 text-scale">
 				@templ.ComponentFunc(func(ctx context.Context, w io.Writer) error {
 					_, err := io.WriteString(w, document.html)
 					return err
