--- a/ui/document.templ
+++ b/ui/document.templ
@@ -33,7 +33,7 @@ templ (view DocumentView) View() {
 				<div>
 					if prevDocument != nil {
 						@gong.NewLink("/docs/" + prevDocument.path).WithClosestOutlet() {
-							<div class="btn btn-lg btn-soft">
+							<div class="btn btn-xl lg:btn-lg btn-soft">
 								<div class="flex flex-col place-items-start">
 									<div class="text-sm">Previous</div>
 									<div class="text-primary font-bold">
@@ -47,7 +47,7 @@ templ (view DocumentView) View() {
 				<div>
 					if nextDocument != nil {
 						@gong.NewLink("/docs/" + nextDocument.path).WithClosestOutlet() {
-							<div class="btn btn-lg btn-soft">
+							<div class="btn btn-xl lg:btn-lg btn-soft">
 								<div class="flex flex-col place-items-end">
 									<div class="text-sm">Next</div>
 									<div class="text-primary font-bold">
