--- a/tailwind.css
+++ b/tailwind.css
@@ -33,3 +33,14 @@ pre {
 .copy-button:hover {
     background: #666;
 }
+
+html {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    overflow: hidden;
+}
+
+body {
+    height: 100%;
+}
