--- a/ui/root.templ
+++ b/ui/root.templ
@@ -48,8 +48,8 @@ templ drawerSide() {
 }
 
 templ drawerContent() {
-	<div class="drawer-content">
-		<div class="flex flex-col max-h-screen">
+	<div class="drawer-content overflow-y-scroll">
+		<div class="flex flex-col h-full">
 			<div class="navbar flex justify-between">
 				<div>
 					<label for="my-drawer" class="btn btn-square btn-ghost btn-scale p-1 drawer-button lg:hidden">
