--- a/ui/root.templ
+++ b/ui/root.templ
@@ -48,7 +48,7 @@ templ drawerSide() {
 }
 
 templ drawerContent() {
-	<div class="drawer-content overflow-y-scroll">
+	<div class="drawer-content overflow-y-hidden">
 		<div class="flex flex-col h-full">
 			<div class="navbar flex justify-between">
 				<div>
